--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "cms"]
 	path = cms
 	url = git://github.com/WordPress/WordPress.git
+[submodule "content/plugins/acf"]
+	path = content/plugins/acf
+	url = https://github.com/elliotcondon/acf.git
