--- a/content/themes/ac-inuk/package.json
+++ b/content/themes/ac-inuk/package.json
@@ -9,7 +9,8 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "",
     "grunt-contrib-sass": "~0.7.3",
-    "grunt-autoprefixer": ""
+    "grunt-autoprefixer": "",
+    "grunt-svgstore": "~0.5.0"
   },
   "dependencies": {
     "bower": "~1.3.1"
