--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "cms"]
 	path = cms
 	url = git://github.com/WordPress/WordPress.git
+[submodule "content/themes/ac_timber"]
+	path = content/themes/ac_timber
+	url = git@bitbucket.org:ambercouch/ac_timber
